--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
 <body>
   <header>
 
+    <section class="header">
+      <div class="logo_container">
+        <img src="pictures/logo-mobile.png" alt="Logo of the Page">
+        <a href="index.html" class="logo_text">The Traveler Blog</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="list-of-posts.html">POSTS</a></li>
+          <li><a href="about.html">ABOUT US</a></li>
+          <li><a href="contact.html">CONTACT US</a></li>
+        </ul>
+      </nav>
+    </section>
+
   </header>
 
 
