--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <script src="https://kit.fontawesome.com/54f19440a6.js" crossorigin="anonymous"></script>
   <link href="styles.css" rel="stylesheet">
   <script defer src="js/index.js" type="module"></script>
 </head>
@@ -17,16 +18,24 @@
   <header>
 
     <section class="header">
-      <div class="logo_container">
-        <img src="pictures/logo-mobile.png" alt="Logo of the Page">
-        <a href="index.html" class="logo_text">The Traveler Blog</a>
+      <div>
+        <a href="index.html" class="logo_container">
+          <img src="pictures/logo-mobile.png" alt="Logo of the Page">
+          <p class="logo_text">The Traveler Blog</p>
+        </a>
       </div>
-      <nav>
+
+      <button class="hamburger">
+        <i class="icon-hamburger fa-solid fa-bars"></i>
+        <i class="icon-close fa-solid fa-xmark"></i>
+      </button>
+
+      <nav id="header_nav" class="header_nav">
         <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="list-of-posts.html">POSTS</a></li>
-          <li><a href="about.html">ABOUT US</a></li>
-          <li><a href="contact.html">CONTACT US</a></li>
+          <li><a class="navItem" href="index.html">HOME <i class="fa-solid fa-house"></i></a></li>
+          <li><a class="navItem" href="list-of-posts.html">POSTS <i class="fa-solid fa-newspaper"></i></a></li>
+          <li><a class="navItem" href="about.html">ABOUT US <i class="fa-solid fa-book"></i></a></li>
+          <li><a class="navItem" href="contact.html">CONTACT US <i class="fa-solid fa-phone"></i></a></li>
         </ul>
       </nav>
     </section>
@@ -36,6 +45,67 @@
 
   
   <main>
+    <h1>Hello there</h1>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <h2>Hello there</h2>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <h2>Hello there</h2>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <h2>Hello there</h2>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <h2>Hello there</h2>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <h2>Hello there</h2>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <h2>Hello there</h2>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
+    <p>nfojweinbfonqfonqoefqojdfqodf</p>
+    <br>
+    <p>ndipoenfnqjo befjoqdws</p>
 
   </main>
 
