--- a/index.html
+++ b/index.html
@@ -29,14 +29,20 @@
         </a>
       </div>
 
+      <section class="cta-header_container">
+        <a href="index.html" class="cta-header"><i class="fa-solid fa-house"></i> HOME</a>
+        <a href="list-of-posts.html" class="cta-header"><i class="fa-solid fa-newspaper"></i> POSTS</a>
+      </section>
+      
       <button class="hamburger">
         <i class="icon-hamburger fa-solid fa-bars"></i>
         <i class="icon-close fa-solid fa-xmark"></i>
       </button>
 
       <nav id="header_nav" class="header_nav">
+        <div class="triangle-nav"></div>
         <ul>
-          <li><div class="nav-selected"></div><a class="navItem" href="index.html">HOME <i class="fa-solid fa-house"></i></a></li>
+          <li ><div class="nav-selected"></div><a class="navItem" href="index.html">HOME <i class="fa-solid fa-house"></i></a></li>
           <li><a class="navItem" href="list-of-posts.html">POSTS <i class="fa-solid fa-newspaper"></i></a></li>
           <li><a class="navItem" href="about.html">ABOUT US <i class="fa-solid fa-book"></i></a></li>
           <li><a class="navItem" href="contact.html">CONTACT US <i class="fa-solid fa-phone"></i></a></li>
@@ -116,7 +122,18 @@
 
 
   <footer>
-
+    <section class="footer_container">
+      <div class="footer-nav_container">
+        <a href="contact.html" class="footer-nav"><i class="fa-solid fa-phone"></i> CONTACTS US</a>
+        <a href="about.html" class="footer-nav"><i class="fa-solid fa-book"></i> ABOUT US</a>
+      </div>
+      <div class="footer-logo_container">
+        <a href="index.html" class="logo_container footer-logo_container">
+          <img src="pictures/logo-mobile.png" alt="Logo of the Page" id="logo" class="logo">
+          <p class="logo_text">The Traveler Blog</p>
+        </a>
+      </div>
+    </section>
   </footer>
 </body>
 </html>
