--- a/about.html
+++ b/about.html
@@ -7,7 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+
+  <script src="https://kit.fontawesome.com/54f19440a6.js" crossorigin="anonymous"></script>
   <link href="styles.css" rel="stylesheet">
+  <script defer src="js/index.js" type="module"></script>
 </head>
 
 
@@ -15,18 +21,94 @@
 <body>
   <header>
 
+    <section class="header">
+      <div>
+        <a href="index.html" class="logo_container">
+          <img src="pictures/logo-mobile.png" alt="Logo of the Page" id="logo" class="logo">
+          <p class="logo_text">The Traveler Blog</p>
+        </a>
+      </div>
+
+      <section class="cta-header_container">
+        <a href="index.html" class="cta-header"><i class="fa-solid fa-house"></i> HOME</a>
+        <a href="list-of-posts.html" class="cta-header"><i class="fa-solid fa-newspaper"></i> POSTS</a>
+      </section>
+      
+      <button class="hamburger">
+        <i class="icon-hamburger fa-solid fa-bars"></i>
+        <i class="icon-close fa-solid fa-xmark"></i>
+      </button>
+
+      <nav id="header_nav" class="header_nav">
+        <div class="triangle-nav"></div>
+        <ul>
+          <li><a class="navItem" href="index.html">HOME <i class="fa-solid fa-house"></i></a></li>
+          <li><a class="navItem" href="list-of-posts.html">POSTS <i class="fa-solid fa-newspaper"></i></a></li>
+          <li><div class="nav-selected"></div><a class="navItem" href="about.html">ABOUT US <i class="fa-solid fa-book"></i></a></li>
+          <li><a class="navItem" href="contact.html">CONTACT US <i class="fa-solid fa-phone"></i></a></li>
+        </ul>
+      </nav>
+    </section>
+
   </header>
 
 
   
   <main>
+    <section class="about_container">
 
+      <section class="about-us_container">
+        <div class="img_container">
+          <img src="pictures/about-us.jpg" alt="Picture of Mark, one of the travelers on our team" class="about-img">
+        </div>
+        <div class="about-us_text">
+          <h1 class="about-h1"><span class="header-span">About US</span></h1>
+          <p>Welcome to our corner of the world, a vibrant travel blog dedicated to exploring the beauty, diversity, and adventure that our planet has to offer! We are travelers just like you, an adventurous team with a shared passion for discovering new cultures, tasting exotic cuisines, and creating lasting memories through travel.</p>
+          <p>We believe that travel is not just about the destinations, but about the people and stories we encounter along the way. We bring our unique perspectives to our travels, capturing both the beauty of our surroundings and the essence of the places we visit.</p>
+          <p class="about-us_text-hidden">We strive to maintain a blog that inspires, educates, and fosters a sense of community among travelers. We value inclusivity, and everyone is welcome here—whether you are a seasoned traveler or someone dreaming of your first trip abroad. We hope to challenge the status quo by showcasing diverse narratives that prioritize sustainability, environmental responsibility, and ethical travel practices.</p>
+          <p class="about-us_text-hidden">We understand that travel can sometimes come with its set of challenges and anxieties, especially for those venturing out of their comfort zones. Thats why we share not just the highlights but also the hurdles we’ve faced along the way, creating a space for open dialogue about the real experiences that come with exploration.
+          </p>
+        </div>
+      </section>
+
+      <div>
+        <h2 class="about-other-headers"><span class="header-span">Our Philosophy</span></h2>
+        <p>At The Traveler Blog, we believe that travel should be accessible to everyone. Whether you’re a seasoned globetrotter or planning your first trip, we’re here to provide you with honest insights, practical tips, and inspiration to help you make the most of your adventures. We strive to create a community of like-minded travel enthusiasts who are eager to share their experiences and learn from one another.</p>
+      </div>
+      <div>
+        <h3 class="about-other-headers"><span class="header-span">What We Offer</span></h3>
+        <p>From travel guides and itineraries to personal narratives and photography, our blog is a treasure trove of resources designed to ignite your wanderlust. Here’s what you can expect to find:</p>
+        <p><i class="about-icon fa-solid fa-circle"></i> Destination Guides: In-depth information on must-see spots, hidden gems, and local favorites.</p>
+        <p><i class="about-icon fa-solid fa-circle"></i> Travel Tips: Practical advice on budgeting, packing, safety, and more to help simplify your travel planning.</p>
+        <p><i class="about-icon fa-solid fa-circle"></i> Personal Stories: Engaging tales from our travels that highlight the joy, challenges, and spontaneity of life on the road.</p>
+        <p><i class="about-icon fa-solid fa-circle"></i>Cultural Insights: A closer look at the traditions, languages, and cuisines that make each location unique.</p>
+      </div>
+      <div>
+        <h4 class="about-other-headers"><span class="header-span">Join Us on This Journey</span></h4>
+        <p>We invite you to join us as we explore the beauty of our planet, share our experiences, and connect with fellow travelers. Whether you’re looking for inspiration for your next trip or tips to enhance your travel game, we hope to be a valuable resource for you.</p>
+        <p>Feel free to reach out, share your own travel stories, or ask questions. We love hearing from our readers and believe that every journey begins with a single step—and every step is worth sharing.
+          Thank you for being part of our travel community. Let’s explore the world together!
+          Happy travels,</p>
+        <p><strong class="about-text-strong">The Traveler Blog</strong></p>
+      </div>
+    </section> 
   </main>
 
 
 
   <footer>
-
+    <section class="footer_container">
+      <div class="footer-nav_container">
+        <a href="contact.html" class="footer-nav"><i class="fa-solid fa-phone"></i> CONTACTS US</a>
+        <a href="about.html" class="footer-nav"><i class="fa-solid fa-book"></i> ABOUT US</a>
+      </div>
+      <div class="footer-logo_container">
+        <a href="index.html" class="logo_container footer-logo_container">
+          <img src="pictures/logo-mobile.png" alt="Logo of the Page" id="logo" class="logo">
+          <p class="logo_text">The Traveler Blog</p>
+        </a>
+      </div>
+    </section>
   </footer>
 </body>
 </html>
