--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
             </div>
             <div>
               <label for="subject">Subject</label>
-              <input type="text" id="subject" name="subject" class="input">
+              <input type="text" id="subject" name="subject" class="input subject">
             </div>
             <div>
               <label for="message">Message</label>
