--- a/index.html
+++ b/index.html
@@ -55,67 +55,23 @@
 
   
   <main>
-    <h1>Hello there</h1>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <h2>Hello there</h2>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <h2>Hello there</h2>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <h2>Hello there</h2>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <h2>Hello there</h2>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <h2>Hello there</h2>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <h2>Hello there</h2>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
-    <p>nfojweinbfonqfonqoefqojdfqodf</p>
-    <br>
-    <p>ndipoenfnqjo befjoqdws</p>
+    <h1>Post of Today</h1>
+    <section class="post-of-today_container"></section>
+    
+    <h2>Explore by Destiny</h2>
+    <section class="explore-destiny_container">
+      <a href="">
+        <div class="carousel_img">
+          <button class="carousel_cta"></button>
+        </div>
+      </a>
+    </section>
+
+    <h3>Europe</h3>
+    <section></section>
+
+    <h4>Asia</h4>
+    <section></section>
 
   </main>
 
