--- a/index.html
+++ b/index.html
@@ -55,8 +55,19 @@
 
   
   <main>
-    <h1>Post of Today</h1>
-    <section class="post-of-today_container"></section>
+    <h1 class="index-main-header">Post of Today</h1>
+
+    <section class="post-of-today_container">
+
+      <div class="post-of-today_img-container" id="post-of-today_img-container">
+        <button class="cta-read-more-desktop">Read More <i class="fa-solid fa-angle-right"></i></button>
+      </div>
+
+      <div class="post-of-today_text-container">
+        <button class="cta-read-more-mobile">Read More <i class="fa-solid fa-angle-right"></i></button>
+      </div>
+
+    </section>
     
     <h2>Explore by Destiny</h2>
     <section class="explore-destiny_container">
