--- a/index.html
+++ b/index.html
@@ -59,17 +59,22 @@
 
     <section class="post-of-today_container">
 
-      <div class="post-of-today_img-container" id="post-of-today_img-container">
+      <div class="post-of-today_img-container loading" id="post-of-today_img-container">
         <button class="cta-read-more-desktop">Read More <i class="fa-solid fa-angle-right"></i></button>
       </div>
 
-      <div class="post-of-today_text-container">
-        <button class="cta-read-more-mobile">Read More <i class="fa-solid fa-angle-right"></i></button>
+      <div class="post-of-today_text-container" id="post-of-today_text-container">
+        <div class="loading loading-title"></div>
+        <div class="loading loading-text"></div>
+        <div class="loading loading-text"></div>
+        <div class="loading loading-text"></div>
+        <div class="loading loading-text"></div>
+        <div class="loading loading-text"></div>
       </div>
-
+      
     </section>
     
-    <h2>Explore by Destiny</h2>
+    <h3>Explore by Destiny</h3>
     <section class="explore-destiny_container">
       <a href="">
         <div class="carousel_img">
@@ -78,10 +83,10 @@
       </a>
     </section>
 
-    <h3>Europe</h3>
+    <h4>Europe</h4>
     <section></section>
 
-    <h4>Asia</h4>
+    <h5>Asia</h5>
     <section></section>
 
   </main>
