--- a/index.html
+++ b/index.html
@@ -56,13 +56,10 @@
   
   <main>
     <h1 class="index-main-header">Post of Today</h1>
-
     <section class="post-of-today_container">
-
       <div class="post-of-today_img-container loading" id="post-of-today_img-container">
         <button class="cta-read-more-desktop">Read More <i class="fa-solid fa-angle-right"></i></button>
       </div>
-
       <div class="post-of-today_text-container" id="post-of-today_text-container">
         <div class="loading loading-title"></div>
         <div class="loading loading-text"></div>
@@ -71,23 +68,35 @@
         <div class="loading loading-text"></div>
         <div class="loading loading-text"></div>
       </div>
-      
     </section>
     
-    <h3>Explore by Destiny</h3>
-    <section class="explore-destiny_container">
+    <section>
+      <h3 class="latest-posts-header">Latest Posts</h3>
+      <div class="carousel_container"></div>
+    </section>
+
+    <h4 class="location-header">Europe</h4>
+    <section class="posts-main-page_container">
       <a href="">
-        <div class="carousel_img">
-          <button class="carousel_cta"></button>
+        <div class="post_container">
+          <img class="post_img" src="pictures/contact.jpg" alt="yo">
+          <h5 class="post_title">10 Surprising Facts About Italy's Enchanting Alps</h5>
+          <p class="post_text">The Italian Alps, part of the larger Alpine mountain range, are renowned for their breathtaking landscapes, skiing destinations, and charming villageskfweonfoeqnfnqoeinfionqefnoqenfionqeoifnonqeofnoqenifonqioenfinqewiofnioqenfonioqenfioqenon.</p>
         </div>
       </a>
     </section>
 
-    <h4>Europe</h4>
-    <section></section>
+    <h5 class="location-header">Asia</h5>
+    <section class="posts-main-page_container">
+      <a href="">
+        <div class="post_container">
+          <img class="post_img" src="pictures/contact.jpg" alt="yo">
+          <h5 class="post_title">10 Surprising Facts About Italy's Enchanting Alps</h5>
+          <p class="post_text">newifoinwoenfowenfnowfneonfowneoifnowenfoinnweoifnwenfoiniowenfoiweionfoniweoifnoifnnwefnoiwenfn wcvonovbnweof  woiebncionweio cknweonfiowenfoinwioenf onfcoiewnfoi ofnoiwrbfoiwbre oefinboiwenbofnowie noenonfcevillages.</p>
+        </div>
+      </a>
+    </section>
 
-    <h5>Asia</h5>
-    <section></section>
 
   </main>
 
