--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
         <p class="contact-paragraph">We're here to help! Please reach out with any questions or inquiries.</p>
 
         <div class="form_container">
-          <form action="" method="POST">
+          <form action="" method="POST" class="form-contact">
             <div>
               <label for="name">Full Name</label>
               <input type="text" id="name" name="name" class="input name">
