--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
   <script src="https://kit.fontawesome.com/54f19440a6.js" crossorigin="anonymous"></script>
   <link href="styles.css" rel="stylesheet">
-  <script defer src="js/index.js" type="module"></script>
+  <script defer src="js/contact.js" type="module"></script>
 </head>
 
 
@@ -82,7 +82,7 @@
               <label for="message">Message</label>
               <textarea id="message" name="message" class="input"></textarea>
             </div>
-            <button class="cta-send">SEND IN</button>
+            <button class="cta-send" id="cta-send" disabled>SEND IN</button>
           </form>
         </div>
 
