--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -77,8 +77,8 @@
     </section>
 
     <section class="all-posts-cta_container">
-      <button class="all-posts-cta"><i class="fa-solid fa-chevron-left"></i> Last Page</button>
-      <button class="all-posts-cta">Next Page <i class="fa-solid fa-chevron-right"></i></button>
+      <button class="all-posts-cta" id="last-page-cta"><i class="fa-solid fa-chevron-left"></i> Last Page</button>
+      <button class="all-posts-cta" id="next-page-cta">Next Page <i class="fa-solid fa-chevron-right"></i></button>
     </section>
   </main>
 
