--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
           <h1 class="about-h1"><span class="header-span">About US</span></h1>
           <p>Welcome to our corner of the world, a vibrant travel blog dedicated to exploring the beauty, diversity, and adventure that our planet has to offer! We are travelers just like you, an adventurous team with a shared passion for discovering new cultures, tasting exotic cuisines, and creating lasting memories through travel.</p>
           <p>We believe that travel is not just about the destinations, but about the people and stories we encounter along the way. We bring our unique perspectives to our travels, capturing both the beauty of our surroundings and the essence of the places we visit.</p>
-          <h2 class="about-h1 mobile-hidden"><span class="header-span about-us_text-hidden">Pre Word</span></h2>
+          <h2 class="about-h1 mobile-hidden lined-header"><span class="header-span about-us_text-hidden">Pre Word</span></h2>
           <p class="about-us_text-hidden">We strive to maintain a blog that inspires, educates, and fosters a sense of community among travelers. We value inclusivity, and everyone is welcome here—whether you are a seasoned traveler or someone dreaming of your first trip abroad. We hope to challenge the status quo by showcasing diverse narratives that prioritize sustainability, environmental responsibility, and ethical travel practices.</p>
           <p class="about-us_text-hidden">We understand that travel can sometimes come with its set of challenges and anxieties, especially for those venturing out of their comfort zones. Thats why we share not just the highlights but also the hurdles weve faced along the way, creating a space for open dialogue about the real experiences that come with exploration.</p>
           <p class="about-us_text-hidden">Lets embark on a journey of discovery together! The world is vast, and every place has a story waiting to be told. With every post, we hope to ignite your passion for travel and inspire you to step outside your comfort zone—or to enjoy the comfort of home with a traveler's spirit.</p>
@@ -73,11 +73,11 @@
       </section>
 
       <div>
-        <h3 class="about-other-headers"><span class="header-span">Our Philosophy</span></h3>
+        <h3 class="about-other-headers lined-header"><span class="header-span">Our Philosophy</span></h3>
         <p>At The Traveler Blog, we believe that travel should be accessible to everyone. Whether you’re a seasoned globetrotter or planning your first trip, we’re here to provide you with honest insights, practical tips, and inspiration to help you make the most of your adventures. We strive to create a community of like-minded travel enthusiasts who are eager to share their experiences and learn from one another.</p>
       </div>
       <div>
-        <h4 class="about-other-headers"><span class="header-span">What We Offer</span></h4>
+        <h4 class="about-other-headers lined-header"><span class="header-span">What We Offer</span></h4>
         <p>From travel guides and itineraries to personal narratives and photography, our blog is a treasure trove of resources designed to ignite your wanderlust. Here’s what you can expect to find:</p>
         <p><i class="about-icon fa-solid fa-circle"></i> Destination Guides: In-depth information on must-see spots, hidden gems, and local favorites.</p>
         <p><i class="about-icon fa-solid fa-circle"></i> Travel Tips: Practical advice on budgeting, packing, safety, and more to help simplify your travel planning.</p>
@@ -85,7 +85,7 @@
         <p><i class="about-icon fa-solid fa-circle"></i>Cultural Insights: A closer look at the traditions, languages, and cuisines that make each location unique.</p>
       </div>
       <div>
-        <h5 class="about-other-headers"><span class="header-span">Join Us on This Journey</span></h5>
+        <h5 class="about-other-headers lined-header"><span class="header-span">Join Us on This Journey</span></h5>
         <p>We invite you to join us as we explore the beauty of our planet, share our experiences, and connect with fellow travelers. Whether youre looking for inspiration for your next trip or tips to enhance your travel game, we hope to be a valuable resource for you.</p>
         <p>Feel free to reach out, share your own travel stories, or ask questions. We love hearing from our readers and believe that every journey begins with a single step—and every step is worth sharing.
           Thank you for being part of our travel community. Lets explore the world together!
