--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -55,10 +55,10 @@
 
   
   <main>
-    <section class="form_container">
+    <h1 class="about-h1 list-of-posts-header"><span class="header-span">Everything and More</span></h1>    <section class="form_container">
       <form action="" method="GET" class="form-list-of-posts">
         <div>
-          <button class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></button>
+          <button class="search-icon" disabled><i class="fa-solid fa-magnifying-glass"></i></button>
           <input type="text" id="search" name="search" placeholder="Search" class="search-input">
           <label for="search"></label>
         </div>
