--- a/list-of-posts.html
+++ b/list-of-posts.html
@@ -55,18 +55,19 @@
 
   
   <main>
-    <h1 class="about-h1 list-of-posts-header"><span class="header-span">Everything and More</span></h1>    <section class="form_container">
+    <h1 class="list-of-posts-header"><span class="header-span">Everything and More</span></h1>    
+    <section class="form_container">
       <form action="" method="GET" class="form-list-of-posts">
         <div>
-          <button class="search-icon" disabled><i class="fa-solid fa-magnifying-glass"></i></button>
-          <input type="text" id="search" name="search" placeholder="Search" class="search-input">
+          <button type="submit" class="search-icon" disabled><i class="fa-solid fa-magnifying-glass"></i></button>
+          <input type="text" id="search" name="search" placeholder="Search..." class="search-input">
           <label for="search"></label>
         </div>
-        <div>
+        <div class="checkbox_container">
           <input type="checkbox" id="newest-to-oldest" name="newest-to-oldest" class="list-of-posts_checkboxes">
           <label for="newest-to-oldest">Newest to Oldest</label>
         </div>
-        <div>
+        <div class="checkbox_container">
           <input type="checkbox" id="oldest-to-newest" name="oldest-to-newest" class="list-of-posts_checkboxes">
           <label for="oldest-to-newest">Oldest to Newest</label>
         </div>
