--- a/contact.html
+++ b/contact.html
@@ -69,20 +69,24 @@
             <div>
               <label for="name">Full Name</label>
               <input type="text" id="name" name="name" class="input name">
+              <div class="error-text" id="name_error"></div>
             </div>
             <div>
               <label for="email">Email</label>
               <input type="text" id="email" name="email" class="input email">
+              <div class="error-text" id="email_error"></div>
             </div>
             <div>
               <label for="subject">Subject</label>
               <input type="text" id="subject" name="subject" class="input subject">
+              <div class="error-text" id="subject_error"></div>
             </div>
             <div>
               <label for="message">Message</label>
               <textarea id="message" name="message" class="input"></textarea>
+              <div class="error-text" id="message_error"></div>
             </div>
-            <button class="cta-send" id="cta-send" disabled>SEND IN</button>
+            <button class="cta-send" id="cta-send" >SEND IN</button>
           </form>
         </div>
 
