--- a/index.html
+++ b/index.html
@@ -76,29 +76,12 @@
     </section>
 
     <h4 class="location-header">Europe</h4>
-    <section class="posts-main-page_container" id="posts-main-page_container-europe">
-      <a href="">
-        <div class="post_container">
-          <img class="post_img" src="pictures/contact.jpg" alt="yo">
-          <h5 class="post_title">10 Surprising Facts About Italy's Enchanting Alps</h5>
-          <p class="post_text">The Italian Alps, part of the larger Alpine mountain range, are renowned for their breathtaking landscapes, skiing destinations, and charming villageskfweonfoeqnfnqoeinfionqefnoqenfionqeoifnonqeofnoqenifonqioenfinqewiofnioqenfonioqenfioqenon.</p>
-        </div>
-      </a>
+    <section class="all-posts_container" id="posts-main-page_container-europe">
     </section>
 
     <h5 class="location-header">Asia</h5>
-    <section class="posts-main-page_container" id="posts-main-page_container-asia">
-      <a href="">
-        <div class="post_container">
-          <img class="post_img" src="pictures/contact.jpg" alt="yo">
-          <h5 class="post_title">10 Surprising Facts About Italy's Enchanting Alps</h5>
-          <p class="post_text">newifoinwoenfowenfnowfneonfowneoifnowenfoinnweoifnwenfoiniowenfoiweionfoniweoifnoifnnwefnoiwenfn wcvonovbnweof  woiebncionweio cknweonfiowenfoinwioenf onfcoiewnfoi ofnoiwrbfoiwbre oefinboiwenbofnowie noenonfcevillages.</p>
-          <p class="post-read-more">Read More <i class="fa-solid fa-arrow-right"></i></p>
-        </div>
-      </a>
+    <section class="all-posts_container" id="posts-main-page_container-asia">
     </section>
-
-
   </main>
 
 
