--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h1 class="index-main-header">Post of Today</h1>
     <section class="post-of-today_container">
       <div class="post-of-today_img-container loading" id="post-of-today_img-container">
-        <button class="cta-read-more-desktop">Read More <i class="fa-solid fa-angle-right"></i></button>
+        <button class="cta-read-more-desktop">TODAYS POST</button>
       </div>
       <div class="post-of-today_text-container" id="post-of-today_text-container">
         <div class="loading loading-title"></div>
@@ -80,7 +80,7 @@
     </section>
 
     <h5 class="location-header">Asia</h5>
-    <section class="all-posts_container" id="posts-main-page_container-asia">
+    <section class="all-posts_container container-asia" id="posts-main-page_container-asia">
     </section>
   </main>
 
