--- a/index.html
+++ b/index.html
@@ -71,17 +71,18 @@
     </section>
     
     <section>
-      <h3 class="latest-posts-header">Latest Posts</h3>
-      <div class="carousel_container"></div>
+      <h3 class="index-headers">Latest Posts</h3>
+      <div class="carousel_container" id="carousel_container"></div>
     </section>
 
-    <h4 class="location-header">Europe</h4>
+    <h4 class="index-headers">Europe</h4>
     <section class="all-posts_container" id="posts-main-page_container-europe">
     </section>
 
-    <h5 class="location-header">Asia</h5>
+    <h5 class="index-headers">Asia</h5>
     <section class="all-posts_container container-asia" id="posts-main-page_container-asia">
     </section>
+    <span class="index-headers delete">!!Delete!!</span>
   </main>
 
 
