--- a/index.html
+++ b/index.html
@@ -70,17 +70,19 @@
       </div>
     </section>
     
-    <section>
+    <section class="latest-posts_container">
       <h3 class="index-headers">Latest Posts</h3>
       <div class="carousel_container" id="carousel_container"></div>
+      <button class="cta-latest-posts cta-last-post" id="cta-last-post"><i class="fa-solid fa-chevron-left"></i></button>
+      <button class="cta-latest-posts cta-next-post" id="cta-next-post"><i class="fa-solid fa-chevron-right"></i></button>
     </section>
 
-    <h4 class="index-headers">Europe</h4>
-    <section class="all-posts_container" id="posts-main-page_container-europe">
+    <h4 class="index-headers">Asia</h4>
+    <section class="all-posts_container" id="posts-main-page_container-asia">
     </section>
 
-    <h5 class="index-headers">Asia</h5>
-    <section class="all-posts_container container-asia" id="posts-main-page_container-asia">
+    <h5 class="index-headers">Europe</h5>
+    <section class="all-posts_container container-asia" id="posts-main-page_container-europe">
     </section>
     <span class="index-headers delete">!!Delete!!</span>
   </main>
