--- a/index.html
+++ b/index.html
@@ -68,8 +68,26 @@
       </div>
     </section>
     
-    <section class="latest-posts_container">
+    <section class="latest-posts_container" id="latest-posts_container">
       <h3 class="index-headers">Latest Posts</h3>
+      <div class="loading_container" id="loading_container">
+        <div class="loading_post">
+          <div class="loading loading_img"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+        </div>
+        <div class="loading_post">
+          <div class="loading loading_img"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+          <div class="loading loading-text"></div>
+        </div>
+      </div>
       <div class="carousel_container" id="carousel_container"></div>
       <button class="cta-latest-posts cta-last-post" id="cta-last-post"><i class="fa-solid fa-chevron-left"></i></button>
       <button class="cta-latest-posts cta-next-post" id="cta-next-post"><i class="fa-solid fa-chevron-right"></i></button>
