--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
         <h1 class="about-h1"><span class="header-span">Contact US</span></h1>
         <p class="contact-paragraph">We're here to help! Please reach out with any questions or inquiries.</p>
 
-        <div class="form_container">
+        <div class="form-contact_container">
           <form action="./php/send-contact.php" method="POST" class="form-contact" id="form-contact">
             <div>
               <label for="name">Full Name</label>
