--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
               <textarea id="message" name="message" class="input"></textarea>
               <div class="error-text" id="message_error"></div>
             </div>
-            <button class="cta-send" id="cta-send" >SEND IN</button>
+            <button class="cta-send" id="cta-send" disabled>SEND IN</button>
           </form>
         </div>
 
