--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
         <img src="/pictures/contact.jpg" class="contact_img" alt="picture of Matt and John from our team at The Traveler Blog">
       </div>
       <div class="contact_text">
-        <h1 class="about-h1"><span class="header-span">Contact US</span></h1>
+        <h1 class="about-h1"><span class="header-span">Contact Us</span></h1>
         <p class="contact-paragraph">We're here to help! Please reach out with any questions or inquiries.</p>
 
         <div class="form-contact_container">
